--- a/pixelegg/less/layout_messages.less
+++ b/pixelegg/less/layout_messages.less
@@ -268,6 +268,7 @@
 		line-height: 22pt;
 		color: #b9436c;
 		white-space: nowrap;
+		z-index:999;
 		&:before {
 			content: '';
 			position: absolute;
