--- a/pixelegg/mobile/fw_mobile.css
+++ b/pixelegg/mobile/fw_mobile.css
@@ -3844,6 +3844,7 @@ td.lettersearch {
   line-height: 22pt;
   color: #b9436c;
   white-space: nowrap;
+  z-index: 999;
 }
 #egwpopup_fw_notifications .popup_note:before {
   content: '';
